    - current time was added to reports
    - the following translations were updated:

      Italian, Norwegian, Portuguese, Spanish(ES), French(FR), Dutch, Czech

    - dry_run parameter added to GUI options as well as UD_DRY_RUN environment
      variable support added to the driver to be able to quickly test algorithms
      without actual data moves on disk
    - Developers: winx_get_system_time, winx_get_local_time functions 
      added to zenwinx library
    
    alpha2:
    - ability to resize list of volumes was added to graphical interface
    - the volume label is now displayed in the volume list
    - textual progress is now displayed in the status column of the volume list
    - file sizes were added to HTML reports
    - file sizes were converted to a human readable format in text reports
    - few bugs were fixed in the BootExecute Control program used to enable and
      disable the boot time defragmenter
    - Developers: build scripts were highly optimized
    - mistakes preventing build on the path containing spaces were eliminated
    - support of custom report options was added to simplify upgrade 
      of default options
    - the following translations were updated:

      Chinese (Simplified)

    - the problem of dialog captions not being translated was fixed
    
    alpha1:
    - GUI was redesigned to be much more ergonomic (comfortable for daily use)
    - ability to change preferences without the need to restart GUI was added
    - ability to resize GUI window at any time was added;
      cluster map scales now automatically
    - GUI flicker on window resize was reduced
    - better hotkeys were assigned to GUI actions
    - the process of adding/editing/testing of translations
      was highly simplified
    - GUI uses system font respecting global Windows settings anywhere
      except of the list control for which mono-space fonts are more preferred
    - GUI uses custom font in all dialog boxes in case of Burmese (Padauk)