@@ -14,6 +14,8 @@ HISTORY
     - dry_run parameter added to GUI options as well as UD_DRY_RUN environment
       variable support added to the driver to be able to quickly test algorithms
       without actual data moves on disk
+    - keyboard reading routines used at Windows boot time were reimplemented
+      to reach higher reliability
     - Developers: winx_get_system_time, winx_get_local_time functions 
       added to zenwinx library
     
